# drf_watchmate

./: db.sqlite3  pyproject.toml
watchlist/: admin.py  models.py
watchlist/api/: serializers.py  urls.py  views.py
watchlist/migrations/: 0001_initial.py  0002_watchlist_platform.py  0003_review.py
watchmate_project/: asgi.py  settings.py  urls.py  wsgi.py
